--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -59,3 +59,10 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 /src/generated/prisma
 
 data
+
+# Firebase credentials (NEVER commit these)
+firebase-service-account.json
+firebase-adminsdk-*.json
+output.txt
+
+
