feat: Implement Firebase authentication and role-based access control with user roles and guards.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -28,3 +28,8 @@ FIREBASE_CLIENT_EMAIL="firebase-adminsdk-xxxxx@sigma-icon-452815-q2.iam.gservice
 # Option 3: Use service account JSON file (local development only)
 # Place the file in apps/backend/ and name it firebase-service-account.json
 # FIREBASE_SERVICE_ACCOUNT_PATH="./firebase-service-account.json"
+
+# Admin Configuration
+# User registering with this email will automatically become ADMIN
+ADMIN_EMAIL="admin@yourdomain.com"
+
