--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -38,6 +38,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.5.0",
     "@prisma/client": "^6.16.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
