--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -97,5 +97,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   }
 }
