fix: filter by level

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -33,3 +33,10 @@ FIREBASE_CLIENT_EMAIL="firebase-adminsdk-xxxxx@sigma-icon-452815-q2.iam.gservice
 # User registering with this email will automatically become ADMIN
 ADMIN_EMAIL="admin@yourdomain.com"
 
+# PayOS Payment Gateway Configuration
+# Set PAYOS_MOCK_MODE=true for local development without real PayOS account
+PAYOS_MOCK_MODE="true"
+# For production, set these values from PayOS Dashboard:
+# PAYOS_CLIENT_ID="your_client_id"
+# PAYOS_API_KEY="your_api_key"
+# PAYOS_CHECKSUM_KEY="your_checksum_key"
