feat: Add comprehensive backend test setup including data factories, test helpers, mocks, Jest configuration, and a test environment.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,11 +25,23 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --ignore-pattern \"**/generated/prisma/**\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "jest --config jest.config.js",
+    "test:unit": "jest --config jest.config.js --testPathPattern=test-setup/tests/unit",
+    "test:integration": "jest --config jest.config.js --testPathPattern=test-setup/tests/integration",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:all": "jest --config jest.config.js",
+    "test:watch": "jest --config jest.config.js --watch",
+    "test:ci": "jest --config jest.config.js --coverage --watchAll=false",
+    "test:cov": "jest --config jest.config.js --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --config jest.config.js --runInBand",
+    "test:perf": "artillery run test-setup/tests/performance/load-test.yml",
+    "test:db:setup": "docker-compose -f test-setup/docker-compose.test.yml up -d postgres-test",
+    "test:db:teardown": "docker-compose -f test-setup/docker-compose.test.yml down",
+    "test:db:migrate": "DATABASE_URL=\"postgresql://test:test@localhost:5433/nghe_content_test\" prisma migrate deploy",
+    "test:db:reset": "DATABASE_URL=\"postgresql://test:test@localhost:5433/nghe_content_test\" prisma migrate reset --force",
+    "test:db:seed": "DATABASE_URL=\"postgresql://test:test@localhost:5433/nghe_content_test\" prisma db seed",
+    "pretest": "npm run test:db:setup && sleep 5 && npm run test:db:migrate",
+    "posttest": "npm run test:db:teardown"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -54,6 +66,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@faker-js/faker": "^10.1.0",
     "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
@@ -63,11 +76,13 @@
     "@types/node": "^22.10.7",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
+    "artillery": "^2.0.27",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "jest-environment-node": "^30.1.2",
     "prettier": "^3.4.2",
     "prisma": "^7.1.0",
     "source-map-support": "^0.5.21",
