--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -14,5 +14,9 @@
     // "target": "ES2022",
     // "types": ["node"]
   },
-  "include": ["src/**/*", "test/**/*"]
+  "include": [
+    "src/**/*",
+    "test/**/*",
+    "test-setup/**/*"
+  ]
 }
