--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "lucide-react": "^0.454.0",
     "next": "^16.0.7",
     "react": "^19.2.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
