--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -77,6 +77,7 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "artillery": "^2.0.27",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
