feat: Implement initial NestJS backend setup including database, health monitoring, environment configuration, and payment gateway integration.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,3 +1,8 @@
+# Environment Configuration
+# NODE_ENV controls: Swagger docs, CORS origins, rate limits, error details, PayOS mock, logging
+# Values: development (default) | production
+NODE_ENV="development"
+
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
 
@@ -34,8 +39,9 @@ FIREBASE_CLIENT_EMAIL="firebase-adminsdk-xxxxx@sigma-icon-452815-q2.iam.gservice
 ADMIN_EMAIL="admin@yourdomain.com"
 
 # PayOS Payment Gateway Configuration
-# Set PAYOS_MOCK_MODE=true for local development without real PayOS account
-PAYOS_MOCK_MODE="true"
+# In development: mock mode is enabled by default (set PAYOS_MOCK_MODE=false to disable)
+# In production: mock mode is disabled by default (requires real credentials)
+# PAYOS_MOCK_MODE="false"  # Uncomment to use real PayOS in development
 # For production, set these values from PayOS Dashboard:
 # PAYOS_CLIENT_ID="your_client_id"
 # PAYOS_API_KEY="your_api_key"
