--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -37,9 +37,9 @@
     "test:perf": "artillery run test-setup/tests/performance/load-test.yml",
     "test:db:setup": "docker-compose -f test-setup/docker-compose.test.yml up -d postgres-test",
     "test:db:teardown": "docker-compose -f test-setup/docker-compose.test.yml down",
-    "test:db:migrate": "DATABASE_URL=\"postgresql://test:test@localhost:5433/nghe_content_test\" prisma migrate deploy",
-    "test:db:reset": "DATABASE_URL=\"postgresql://test:test@localhost:5433/nghe_content_test\" prisma migrate reset --force",
-    "test:db:seed": "DATABASE_URL=\"postgresql://test:test@localhost:5433/nghe_content_test\" prisma db seed",
+    "test:db:migrate": "npx prisma db push --config prisma/prisma.config.test.ts",
+    "test:db:reset": "npx prisma db push --force-reset --config prisma/prisma.config.test.ts",
+    "test:db:seed": "npx prisma db seed --config prisma/prisma.config.test.ts",
     "pretest": "npm run test:db:setup && sleep 5 && npm run test:db:migrate",
     "posttest": "npm run test:db:teardown"
   },
