--- a/apps/backend/test-setup/docker-compose.test.yml
+++ b/apps/backend/test-setup/docker-compose.test.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U test"]
+      test: ["CMD-SHELL", "pg_isready -U test -d nghe_content_test"]
       interval: 2s
       timeout: 5s
       retries: 10
