--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,8 +26,8 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --ignore-pattern \"**/generated/prisma/**\"",
     "test": "jest --config jest.config.js",
-    "test:unit": "jest --config jest.config.js --testPathPattern=test-setup/tests/unit",
-    "test:integration": "jest --config jest.config.js --testPathPattern=test-setup/tests/integration",
+    "test:unit": "jest --config jest.config.js --testPathPatterns=test-setup/tests/unit",
+    "test:integration": "jest --config jest.config.js --testPathPatterns=test-setup/tests/integration --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:all": "jest --config jest.config.js",
     "test:watch": "jest --config jest.config.js --watch",
