--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,11 +28,11 @@
     "test": "jest --config jest.config.js",
     "test:unit": "jest --config jest.config.js --testPathPatterns=test-setup/tests/unit",
     "test:integration": "jest --config jest.config.js --testPathPatterns=test-setup/tests/integration --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config jest.config.js --testPathPatterns=test-setup/tests/e2e --runInBand --no-coverage",
     "test:all": "jest --config jest.config.js",
     "test:watch": "jest --config jest.config.js --watch",
-    "test:ci": "jest --config jest.config.js --coverage --watchAll=false",
-    "test:cov": "jest --config jest.config.js --coverage",
+    "test:ci": "jest --config jest.config.js --coverage --runInBand --watchAll=false",
+    "test:cov": "jest --config jest.config.js --coverage --runInBand",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --config jest.config.js --runInBand",
     "test:perf": "artillery run test-setup/tests/performance/load-test.yml",
     "test:db:setup": "docker-compose -f test-setup/docker-compose.test.yml up -d postgres-test",
