fix: use root package-lock.json path for npm cache

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: apps/backend/package-lock.json
+        cache-dependency-path: package-lock.json
 
     - name: Install dependencies
       working-directory: apps/backend
@@ -154,7 +154,7 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: apps/backend/package-lock.json
+        cache-dependency-path: package-lock.json
 
     - name: Install dependencies
       working-directory: apps/backend
@@ -216,7 +216,7 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: apps/backend/package-lock.json
+        cache-dependency-path: package-lock.json
 
     - name: Install dependencies
       working-directory: apps/backend
