--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -13,7 +13,7 @@ on:
       - '.github/workflows/backend-tests.yml'
 
 env:
-  NODE_VERSION: '20'
+  NODE_VERSION: '22'
   DATABASE_URL: postgresql://test:test@localhost:5432/nghe_content_test
 
 jobs:
@@ -48,7 +48,7 @@ jobs:
 
     - name: Install dependencies
       working-directory: apps/backend
-      run: npm ci
+      run: npm ci --ignore-scripts
 
     - name: Generate Prisma Client
       working-directory: apps/backend
@@ -158,7 +158,7 @@ jobs:
 
     - name: Install dependencies
       working-directory: apps/backend
-      run: npm ci
+      run: npm ci --ignore-scripts
 
     - name: Install Artillery
       run: npm install -g artillery
@@ -220,7 +220,7 @@ jobs:
 
     - name: Install dependencies
       working-directory: apps/backend
-      run: npm ci
+      run: npm ci --ignore-scripts
 
     - name: Run Snyk security scan
       uses: snyk/actions/node@master
