--- a/apps/backend/tsconfig.build.json
+++ b/apps/backend/tsconfig.build.json
@@ -8,5 +8,5 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext"
   },
-  "exclude": ["node_modules", "test", "dist", "**/*.spec.ts"]
+  "exclude": ["node_modules", "test", "test-setup", "dist", "**/*.spec.ts"]
 }
