--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,7 +23,7 @@
     "db:push:reset": "prisma db push --force-reset",
     "db:push:reset:seed": "prisma db push --force-reset && prisma db seed",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --ignore-pattern \"**/generated/prisma/**\"",
     "test": "jest --config jest.config.js",
     "test:unit": "jest --config jest.config.js --testPathPatterns=test-setup/tests/unit",
