--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -130,107 +130,6 @@ jobs:
         name: backend-coverage
         fail_ci_if_error: false
 
-  performance-test:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main'
-
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_USER: test
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: nghe_content_test
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 2s
-          --health-timeout 5s
-          --health-retries 10
-        ports:
-          - 5432:5432
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: package-lock.json
-
-    - name: Install root dependencies
-      run: npm ci --ignore-scripts
-
-    - name: Install backend dependencies
-      working-directory: apps/backend
-      run: npm ci --ignore-scripts
-
-    - name: Install Artillery
-      run: npm install -g artillery
-
-    - name: Generate Prisma Client
-      working-directory: apps/backend
-      run: npx prisma generate
-
-    - name: Run database migrations
-      working-directory: apps/backend
-      run: npm run test:db:migrate
-      env:
-        DATABASE_URL: ${{ env.DATABASE_URL }}
-
-    - name: Build application
-      working-directory: apps/backend
-      run: npm run build
-      env:
-        NODE_ENV: production
-        DATABASE_URL: ${{ env.DATABASE_URL }}
-
-    - name: Verify build output
-      working-directory: apps/backend
-      run: |
-        echo "Checking build output..."
-        ls -la dist/ || echo "dist folder not found"
-        ls -la dist/src/main.js || echo "main.js not found"
-
-    - name: Start application and wait for ready
-      working-directory: apps/backend
-      run: |
-        # Start server in background
-        nohup npm run start:prod > server.log 2>&1 &
-        
-        # Wait for server to be ready (max 30 seconds)
-        echo "Waiting for server to start..."
-        for i in {1..30}; do
-          if curl -s http://localhost:3000/health > /dev/null 2>&1; then
-            echo "Server is ready!"
-            exit 0
-          fi
-          echo "Attempt $i: Server not ready, waiting..."
-          sleep 1
-        done
-        
-        echo "Server failed to start. Log output:"
-        cat server.log
-        exit 1
-      env:
-        NODE_ENV: production
-        DATABASE_URL: ${{ env.DATABASE_URL }}
-        JWT_SECRET: production-secret-key
-        FIREBASE_PROJECT_ID: nghe-content-prod
-        PAYOS_MOCK_MODE: "true"
-
-    - name: Run performance tests
-      working-directory: apps/backend
-      run: npm run test:perf
-      continue-on-error: true
-
-    - name: Stop application
-      run: pkill -f "node dist/src/main" || true
-      if: always()
-
   security-scan:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
@@ -256,7 +155,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [test, performance-test, security-scan]
+    needs: [test, security-scan]
     if: always()
 
     steps:
